<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="btn_text_spotify">SPOTIFY STREAMER</string>
    <string name="btn_text_scores">SCORES APP</string>
    <string name="btn_text_library">LIBRARY APP</string>
    <string name="btn_text_build">BUILD IT BIGGER</string>
    <string name="btn_text_reader">XYZ READER</string>
    <string name="btn_text_capstone">CAPSTONE: MY OWN APP</string>
</resources>
