<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">



    <TextView
        android:text="@string/main_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="40dp"
        >

    <Button
        android:id="@+id/btn_spotify"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/btn_text_spotify"
        android:layout_marginTop="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="20dp"
        android:background="#F08C35" />

        <Button
            android:id="@+id/btn_scores"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_scores"
            android:layout_marginTop="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="20dp"
            android:background="#F08C35"/>

        <Button
            android:id="@+id/btn_library"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_library"
            android:layout_marginTop="15sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="20dp"
            android:background="#F08C35"/>

        <Button
            android:id="@+id/btn_build"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_build"
            android:layout_marginTop="15sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="20dp"
            android:background="#F08C35"/>

        <Button
            android:id="@+id/btn_reader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_reader"
            android:layout_marginTop="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="20dp"
            android:background="#F08C35"/>

        <Button
            android:id="@+id/btn_capstone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_capstone"
            android:layout_marginTop="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="20dp"
            android:background="#D50000"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

    </RelativeLayout>
